tv/tvheadend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tvheadend
  name: tvheadend
spec:
  selector:
    app: tvheadend
  ports:
    - name: http
      port: 9981
      targetPort: 9981
    - name: htsp
      port: 9982
      targetPort: 9982
  type: ClusterIP
