tv/xteve-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: xteve
  name: xteve
spec:
  selector:
    app: xteve
  ports:
    - name: http
      port: 34400
      targetPort: 34400
  type: ClusterIP
