tv/tvheadend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "ca-issuer"
    cert-manager.io/common-name: "tvheadend.raspberrypi"
  name: "tvheadend-ingress"
spec:
  tls:
  - hosts:
    - tvheadend.raspberrypi
    secretName: tvheadend-auto-certificate-key-pair
  rules:
  - host: tvheadend.raspberrypi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tvheadend
            port:
              name: http
