tv/xteve-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "ca-issuer"
    cert-manager.io/common-name: "xteve.raspberrypi"
  name: "xteve-ingress"
spec:
  tls:
  - hosts:
    - xteve.raspberrypi
    secretName: xteve-auto-certificate-key-pair
  rules:
  - host: xteve.raspberrypi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xteve
            port:
              name: http
